Packaged .jar with scripts directory